5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1712_2506.log
== TEST (2019-05-13 15:52:51) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = 0       #tambaqui
lim = 1,2 * (10 ** 4)
p = p / 100 #percentual

while (i > 0) and (i < lim):
	t = t + ((i * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (i > 0) and (i < lim):
TypeError: '<' not supported between instances of 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:53:27) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = 0       #tambaqui
lim = 1,2 * (10 ** 4)
p = p / 100 #percentual

while ((i > 0) and (i < lim)):
	t = t + ((i * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while ((i > 0) and (i < lim)):
TypeError: '<' not supported between instances of 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:54:09) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = 0       #tambaqui
lim = 1,2 * (10 ** 4)
p = p / 100 #percentual

while (i > 0 , i < lim):
	t = t + ((i * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while (i > 0 , i < lim):
TypeError: '<' not supported between instances of 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:54:28) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = 0       #tambaqui
lim = 1,2 * (10 ** 4)
p = p / 100 #percentual

while i > 0 , i < lim:
	t = t + ((i * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
File "XXXX", line 10
    while i > 0 , i < lim:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:59:50) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = 0       #tambaqui
lim = 1,2 * (10 ** 4)
p = p / 100 #percentual

while i > 0 and i < lim:
	t = t + ((i * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while i > 0 and i < lim:
TypeError: '<' not supported between instances of 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 16:00:34) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = 0       #tambaqui
lim = 1.2 * (10 ** 4)
p = p / 100 #percentual

while i > 0 and i < lim:
	t = t + ((i * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while i > 0 and i < lim:
TypeError: '<' not supported between instances of 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 16:01:15) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = 0       #tambaqui
lim = 12000
p = p / 100 #percentual

while i > 0 and i < lim:
	t = t + ((i * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while i > 0 and i < lim:
TypeError: '<' not supported between instances of 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 16:02:24) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while i > 0 and i < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i < 0:
	print("EXTICAO")
else:
	print("LIMITE")
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    while i > 0 and i < lim:
TypeError: '<' not supported between instances of 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 16:02:59) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i < 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 16:03:12) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i < 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.203373
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:19:22) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i < 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:19:40) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i < 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.243421
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:21:18) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i < 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:21:33) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i < 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:22:20) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:22:32) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.138526
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:23:30) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i >= lim):
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.144246
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:23:58) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i >= lim):
	print("LIMITE")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:24:06) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i >= lim):
	print("LIMITE")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:24:47) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i >= lim):
	print("LIMITE")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:25:39) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i <0= lim):
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.167918
-- ERROR:
  File "/home/codebench/codes/1712/2506/main.py", line 15
    elif (i <0= lim):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:25:45) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i <= lim):
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.150246
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:27:10) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i >= lim):
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.13288
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:27:14) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif (i >= lim):
	print("LIMITE")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:27:44) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:27:58) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:07:22) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.206995
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:07:26) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
else:
	print("LIMITE")
print(a)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:09:58) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif >= lim:
	print("LIMITE")
print(a)
-- ERROR:
File "XXXX", line 15
    elif >= lim:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:10:52) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if i <= 0:
	print("EXTINCAO")
elif t >= lim:
	print("LIMITE")
print(a)
-- OUTPUT:
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:11:12) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if t <= 0:
	print("EXTINCAO")
elif t >= lim:
	print("LIMITE")
print(a)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:11:36) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if t <= 0:
	print("EXTINCAO")
elif t >= lim:
	print("LIMITE")
print(a)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:11:49) 
-- CODE:
i = int(input("Quantidade inicial: "))          #Quantidade de peixes inicial
p = float(input("Percentual de crescimento: ")) #Percentual de crescimento
q = int(input("Quantidade vendida: "))          #Quantidade vendida anualmente

a = 0       #contador
t = i       #tambaqui
lim = 12000
p = p / 100 #percentual

while t > 0 and t < lim:
	t = t + ((t * p) - q)
	a = a + 1
if t <= 0:
	print("EXTINCAO")
elif t >= lim:
	print("LIMITE")
print(a)
-- EXECUTION TIME:
0.200125
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
